[project]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = [
    {name = "Fernando599",email = "kevinmafra1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
]

[tool.poetry]
packages = [{include = "fast_zero"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.12"
pytest = "^8.4.2"
pytest-cov = "^6.3.0"
taskipy = "^1.14.1"

[tool.pytest.ini_options]
pythonpath = '.'
addopts = '-p no:warnings'

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks] 
run = 'fastapi dev fast_zero/app.py' 
pre_test = 'task lint'
test = 'pytest --cov=fast_zero -vv'
post_test = 'coverage html' 
lint = 'ruff check . && ruff check . --diff' 
format = 'ruff format .'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
